# cgzip

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  flake.nix
app/: CMakeLists.txt  main.cpp  uvgz.cpp
data/millbay_corpus/: README.txt  pg1513.epub  regional_district_weekly_2021.xlsx
include/: block_type.hpp  block_type_0.hpp  block_type_1.hpp  block_type_2.hpp  change_point_detection.hpp  constants.hpp  deflate.hpp  gz.hpp  lzss.hpp  package_merge.hpp  prefix_codes.hpp  ring_buffer.hpp  size.hpp  types.hpp
scripts/: validate
src/: CMakeLists.txt  deflate.cpp  gz.cpp
test/: CMakeLists.txt  test_lzss.cpp  test_package_merge.cpp  test_prefix_codes.cpp  test_ring_buffer.cpp
